<resources>
    <string name="app_name">Volta</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mes_realisations">Mes Realisations</string>
    <string name="nouveau_projet">Nouveau Projet</string>
    <string name="r_glages">Réglages</string>
    <string name="localisation">Localisation</string>
    <string name="title_activity_maps">Map</string>
    <string name="consommation_electrique">Consommation Electrique</string>
    <string name="kwh_an">kWh/an</string>
    <string name="hauteur_sous_plafond">Hauteur Sous Plafond</string>
    <string name="type_de_chauffage">Type De Chauffage</string>
    <string name="charbon">Charbon</string>
    <string name="electrique">Electrique</string>
    <string name="gpl">GPL</string>
    <string name="gaz">Gaz</string>
    <string name="pac">PAC</string>
    <string name="bois">Bois</string>
    <string name="fioul">Fioul</string>
    <string name="surface_de_la_toiture">Surface De La Toiture</string>
    <string name="inclinaison">Inclinaison</string>
    <string name="degrees">°</string>
    <string name="azimuth">Azimuth</string>
    <string name="cout_electricite">Cout Moyen Electricite</string>
    <string name="euro_kwh">€/kWh</string>
    <string name="localisation_en_cours">Localisation en cours...</string>
    <string name="eau_chaude_sanitaire">Eau Chaude Sanitaire</string>
    <string name="chauffe_eau_electrique">Chauffe-eau electrique</string>
    <string name="chauffe_eau_electrique_instantane">Chauffe-eau electrique instantane</string>
    <string name="chauffe_eau_gaz_installe_avant_1989">Chauffe-eau gaz</string>
    <string name="chauffe_eau_thermodynamique">Chauffe-eau thermodynamique</string>
    <string name="contactez_nous">Contactez Nous</string>
    <string name="a_propos">A Propos</string>
    <string name="envoyer">Envoyer</string>
    <string name="informations_de_base">Informations De Base</string>
    <string name="mr">Mr.</string>
    <string name="mme">Mme.</string>
    <string name="mlle">Mlle.</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="etude_technique">Etude Technique</string>
    <string name="mon_agenda">Mon Agenda</string>
    <string name="email_professionel">Gmail Professionel</string>
    <string name="configurer_mon_compte">Configurer mon compte.</string>
    <string name="no_event_planed">Aucun événement n\'est prévu..</string>
    <string name="socity">Société</string>
    <string name="enter_title_label">Entrer un titre</string>
    <string name="enter_price_label">Entrer un prix</string>
    <string name="valid">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="enter_location_label">Entrer une localisation</string>
    <string name="refuser">Refuser</string>
    <string name="accepter">Accepter</string>
    <string name="configure_email_professionel">Configurer mon compte Gmail</string>
    <string name="one_account_allowed">Only one account allowed</string>
    <string name="send_mail">Send Mail</string>
    <string name="comment_pouvons_nous_vous_aider">Comment pouvons nous vous aider ?</string>
    <string name="associer_compte_empty_frag">Associez votre compte gmail afin de pouvoir nous contacter.</string>
    <string name="no_project_empty_frag">Vous n\'avez pas encore de projet...</string>
    <string name="continu">continuer</string>
    <string name="pergola">Pergola</string>
    <string name="_2_pieds_de_fixation">2 pieds de fixation</string>
    <string name="_4_pieds_de_fixation">4 pieds de fixation</string>
    <string name="la_perspective">La perspective</string>
    <string name="augmenter_mon_pouvoir_d_achat">Augmenter mon pouvoir d\'achat</string>
    <string name="transferer_mes_charges">Transferer mes charges</string>
    <string name="devenir_independant_au_plus_vite">Devenir independant au plus vite</string>
    <string name="_1_2kw_n_8m">8m² : 1.2kW</string>
    <string name="_2_4kw_n_16m">16m² : 2.4kW</string>
    <string name="_2_7kw_n_18m">18m² : 2.7kW</string>
    <string name="_3_6kw_n_24m">24m² : 3.6kW</string>
    <string name="mes_packs">Mes Packs</string>
    <string name="mes_projets">Mes Projets</string>
    <string name="mon_materiel_label">Mon Materiel</string>
    <string name="organisme_credit">Mon Organisme De Financement</string>
    <string name="type_installation">Mon Type D\'Installation</string>
    <string name="ballon_thermodynamique">Ballon Thermodynamique</string>
    <string name="pompe_a_chaleur">Pompe a Chaleur</string>
    <string name="panneaux_photovolaiques">Panneaux Photovolaiques</string>
    <string name="mes_installations">Mes Installations</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="ressaisisser_le_nouveau_mot_de_passe">Ressaisisser le nouveau mot de passe</string>
    <string name="entrer_mail_invitation">Entrer un mail pour inviter quelqu\'un</string>
    <string name="add_more">Ajouter encore</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="saisisser_une_addresse_mail_de_r_cup_ration">Saisisser une addresse mail de récupération</string>
    <string name="changer_votre_mot_de_passe_label">Changer votre mot de passe</string>
    <string name="configurer_l_envoi_automatique_des_relances">Configurer l\'envoi automatique des relances</string>
    <string name="power_pack">puissance</string>
    <string name="nb_modules_pack">Nombres de modules</string>
    <string name="finish">CREER</string>
</resources>
