<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/rounded_shape_black_stroke"
    android:padding="16dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/changer_votre_mot_de_passe_label"
        />


    <EditText
        android:hint="@string/ancien_mot_de_passe"
        android:id="@+id/oldPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />


    <EditText
        android:hint="@string/nouveau_mot_de_passe"
        android:id="@+id/newPasswordOnceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />

    <EditText
        android:hint="@string/ressaisisser_le_nouveau_mot_de_passe"
        android:id="@+id/newPasswordTwiceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textVisiblePassword" />

    <EditText
        android:hint="@string/saisisser_une_addresse_mail_de_r_cup_ration"
        android:id="@+id/recupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/validPasswordChangeBtn"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/valid"
        android:background="@drawable/rounded_shape_black_stroke"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>