<android.support.v7.widget.CardView style="@style/CardViewInfoCustomer"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/localisationFoundLyt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textEventTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/locationEventTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:textColor="#90000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/dateEventTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="#90000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchingLocalisationLyt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/localisation_en_cours"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    </com.google.android.gms.maps.MapView>

    <LinearLayout
        android:id="@+id/acceptDeclineLyt"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/declineBtn"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/refuser"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.005"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <Button
            android:id="@+id/acceptBtn"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/accepter"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>
